--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div class="message">
         <h2>I made this just for you 💌</h2>
-        <p>Every petal on this page is a piece of my heart.</p>
+        <p>I wanted to start reminding you more.</p>
       </div>
 
       <div class="gift-box" onclick="revealNote()">🎁 Tap the gift</div>
